# show-scheduler

./: README.md  find_show_orders.py  pyproject.toml
rust/: Cargo.toml
rust/src/: lazy_d2_costs.rs  local_search.rs  main.rs  optimize.rs  optimize_complete.rs  subtour_elimination.rs
